Added bower and grunt with some basic tasks. Removed previous external js components - using bower for them now.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
 <body>
 
-<script src="jquery-2.1.1.min.js"></script>
-<script src="simpleStorage.js"></script>
-<script src="moment.min.js"></script>
-<script src="app.js"></script>
+<!-- build:js app.js -->
+<script src="/lib/jQuery/jquery.js"></script>
+<script src="/lib/simpleStorage/simpleStorage.js"></script>
+<script src="/lib/moment/moment.js"></script>
+<script src="/core.js"></script>
+<script src="/ui.js"></script>
+<!-- endbuild -->
 </body>
 </html>
