Added htmlmin, clean and connect server tasks.

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <body>
 
-<!-- build:js app.js -->
+<!-- build:js overtime.min.js -->
 <script src="/lib/jQuery/jquery.js"></script>
 <script src="/lib/simpleStorage/simpleStorage.js"></script>
 <script src="/lib/moment/moment.js"></script>
-<script src="/core.js"></script>
-<script src="/ui.js"></script>
+<script src="/src/core.js"></script>
+<script src="/src/ui.js"></script>
 <!-- endbuild -->
 </body>
 </html>
