Added icon fonts from icomoon

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- endbuild -->
 </head>
 <body>
-<main>
+<div id="content">
 
 <section class="overtime-amount">
 <div class="label">I have overtimed:</div>
@@ -48,7 +48,14 @@
   </div>
 </section>
 
-</main>
+</div>
+
+<div class="button-group">
+  <button class="icon-signup">Add</button>
+  <button class="active icon-notebook">Stats</button>
+  <button class="icon-html52">App</button>
+</div>
+
 
 <div class="message hidden"><div class="message-text"></div></div>
 <div class="error hidden"><div class="message-text"></div></div>
