The tabs looks more like tabs now

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <meta name="viewport" content="width=device-width, user-scalable=no">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
 
   <!-- build:css main.css -->
   <link rel="stylesheet" type="text/css" href="dist/main.css">
@@ -51,9 +51,9 @@
 </div>
 
 <div class="button-group">
-  <button class="icon-signup">Add</button>
-  <button class="active icon-notebook">Stats</button>
-  <button class="icon-html52">App</button>
+  <button class="icon-signup"> Add</button>
+  <button class="active icon-notebook"> Stats</button>
+  <button class="icon-html52"> App</button>
 </div>
 
 
