Added description and keywords.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!doctype html>
 <html>
 <head>
+  <title>Overtime</title>
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
+  <meta name="description" content="A simple web app to track your overtime. You are working hard and you deserve to know!">
+  <meta name="keywords" content="overtime, track, stats, work, hours, calendar, web, app, html5, css3">
+  <meta name="author" content="Lucho Yankov">
 
   <!-- build:css main.css -->
   <link rel="stylesheet" type="text/css" href="dist/main.css">
