--- a/stats.html
+++ b/stats.html
@@ -4,11 +4,21 @@
   <title>Overtime</title>
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
   <meta name="description" content="A simple web app to track your overtime. You are working hard and you deserve to know!">
-  <meta name="keywords" content="overtime, track, stats, work, hours, calendar, web, app, html5, css3">
+  <meta name="keywords" content="overtime, track, stats, work, hours, calendar, schedule, help, web, app, html5, css3">
   <meta name="author" content="Lucho Yankov">
 
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <link rel="apple-touch-icon" href="/images/icon-60.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/images/icon-76.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/images/icon-120.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/images/icon-152.png">
+
+  <meta name="mobile-web-app-capable" content="yes">
+  <link rel="icon" sizes="196x196" href="/images/icon-196.png">
+
   <!-- build:css main.css -->
-  <link rel="stylesheet" type="text/css" href="dist/main.css">
+  <link rel="stylesheet" type="text/css" href="/dist/main.css">
   <!-- endbuild -->
 </head>
 <body>
@@ -38,6 +48,7 @@
 <script src="/src/utils.js"></script>
 <script src="/src/ui.js"></script>
 <script src="/src/stats-ui.js"></script>
+<script src="/src/app-ui.js"></script>
 <!-- endbuild -->
 </body>
 </html>
