Added oversleep icons and change texts and some js

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
 <head>
-  <title>Overtime</title>
+  <title>Oversleep</title>
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
-  <meta name="description" content="A simple web app to track your overtime. You are working hard and you deserve to know!">
-  <meta name="keywords" content="overtime, track, stats, work, hours, calendar, schedule, help, web, app, html5, css3">
+  <meta name="description" content="Oversleep is a web app that helps you track how long does it take you to leave your bed after your alarm sets off.">
+  <meta name="keywords" content="oversleep, sleep, stats, time, hours, health, schedule, help, web, app, html5, css3">
   <meta name="author" content="Lucho Yankov">
 
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -25,11 +25,11 @@
 <div id="content">
 
 <section class="overtime-amount">
-<div class="label">I have overtimed:</div>
+<div class="label">I have overslept:</div>
 <div class="default-overtime-amount buttons">
-  <button class="time-amount" data-amount="1">1h</button>
-  <button class="time-amount" data-amount="2">2h</button>
-  <button class="time-amount" data-amount="3">3h</button>
+  <button class="time-amount" data-amount="10">10m</button>
+  <button class="time-amount" data-amount="20">20m</button>
+  <button class="time-amount" data-amount="30">30m</button>
   <button class="activate-custom-overtime-amount more">+</button>
 </div>
 
