--- a/stats.html
+++ b/stats.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
 <head>
-  <title>Overtime</title>
+  <title>Oversleep</title>
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
-  <meta name="description" content="A simple web app to track your overtime. You are working hard and you deserve to know!">
-  <meta name="keywords" content="overtime, track, stats, work, hours, calendar, schedule, help, web, app, html5, css3">
+  <meta name="description" content="Oversleep is a web app that helps you track how long does it take you to leave your bed after your alarm sets off.">
+  <meta name="keywords" content="oversleep, sleep, stats, time, hours, health, schedule, help, web, app, html5, css3">
   <meta name="author" content="Lucho Yankov">
 
   <meta name="apple-mobile-web-app-capable" content="yes">
